# cipicmd

./: README.md  README.rst  TODO.md  cipicmd.py  requirements.txt  setup.cfg
cipicmd/: __init__.py  cipicmd.py
