[metadata]
name = cipicmd
author = Jochen Bartl
author-email = jochenbartl@mailbox.org
summary = Cisco Prime Infrastructure Command Line script
description-file = README.md
home-page = https://github.com/verbosemode/cipicmd
requires-python = >=2.7
classifier = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python

[entry_points]
console_scripts =
    cipicmd = cipicmd:main
