[metadata]
name = cipicmd
author = Jochen Bartl
author-email = jochenbartl@mailbox.org
summary = Cisco Prime Infrastructure Command Line script
description-file = README.rst
home-page = https://github.com/verbosemode/cipicmd
requires-python = >=2.7
classifier = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python

[entry_points]
console_scripts =
    cipicmd = cipicmd:main
